# controllers/Company.go
@@ -21,7 +21,7 @@ type CompanyController struct {
 // @router / [post]
 func (o *CompanyController) Post() {
 	var ob company.Company
-	_ = json.Unmarshal(o.Ctx.Input.RequestBody, &ob)
+	json.Unmarshal(o.Ctx.Input.RequestBody, &ob)
 	companyID := models.AddOne(ob)
 	o.Data["json"] = map[string]string{"CompanyID": companyID}
 	o.ServeJSON()
@@ -60,7 +60,7 @@ func (o *CompanyController) GetAll() {
 // @Title Update
 // @Description update the object
 // @Param	uid			query	string			true		"ID"
-// @Param	body		body 	company.Company	true		"The body"
+// @Param	body		body 	templateType.updateCompanyForm	true		"The body"
 // @Success 200 {object} company.Company
 // @Failure 403 :companyID is empty
 // @router /update [put]
@@ -71,7 +71,7 @@ func (o *CompanyController) Put() {
 	if id != "" {
 		err = models.Update(id, ob.Name, ob.Address)
 		if err != nil {
-			o.Data["json"] = err.Error()
+			o.Data["json"] = err
 		} else {
 			o.Data["json"] = "update success!"
 		}
